--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -37,11 +37,11 @@
         </ion-col>
       </ion-row>
 
-      <h4>Popular Among Friends</h4>
-      <!-- <ion-row class="carousel">
+      <!-- <h4>Popular Among Friends</h4>
+      <ion-row class="carousel">
         <ion-col class="ion-pad">
-          <span *ngFor="let item of trendingMovies" class="movie-thumb">
-            <img src="{{posterUrl}}{{item.poster_path}}" />
+          <span *ngFor="let item of topRatedMovies">
+            <img class="movie-thumb" src="{{posterUrl}}{{item.poster_path}}" />
           </span>
         </ion-col>
       </ion-row> -->
