--- a/src/app/pages/connections/connections.page.html
+++ b/src/app/pages/connections/connections.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="tabs/tab1"></ion-back-button>
+      <ion-back-button text="" defaultHref="tabs/tab1"></ion-back-button>
     </ion-buttons>
     <span *ngIf="showFollowing; then followingTitle else followersTitle"></span>
     <ng-template #followingTitle>
