--- a/src/app/pages/profile-page/profile-page.page.html
+++ b/src/app/pages/profile-page/profile-page.page.html
@@ -1,25 +1,38 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="tabs/tab1"></ion-back-button>
+    <ion-buttons slot="top" slot="start">
+      <ion-back-button text="" defaultHref="tabs/tab1"></ion-back-button>
     </ion-buttons>
-    <ion-avatar>
-      <ion-img [src]="inputtedUser.photoURL"></ion-img>
-    </ion-avatar>
-    <ion-title> {{inputtedUser.displayName}}</ion-title>
-    <p> {{inputtedUser.uid}}</p>
-    <ion-grid>
-      <ion-row>
-        <ion-col size="3" inset="3" (click)="viewFollowing(true)">
-          Following <strong>{{followingCount}}</strong>
-        </ion-col>
-        <ion-col size="3" (click)="viewFollowing(false)">
-          Followers <strong>{{followerCount}}</strong>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
+    <div class="user-profile__user-details">
+      <ion-grid>
+        <ion-row>
+          <ion-col class="user-profile__user-details-image__col">
+            <ion-img class="user-profile__user-details-image" [src]="inputtedUser.photoURL"></ion-img>
+          </ion-col>
+          <ion-col class="user-profile__user-details-name__col">
+            <ion-text class="user-profile__user-details-name__text"> {{inputtedUser.displayName}}</ion-text>
+            <ion-row class="user-profile__user-details-follow-count__row">
+              <ion-col (click)="viewFollowing(true)" class="user-profile__user-details-following__col">
+                <ion-text class="blue-text">Following</ion-text>
+                <ion-row>
+                  <ion-text>{{followingCount}}</ion-text>
+                </ion-row>
+              </ion-col>
+              <div class="vertical-line"></div>
+              <ion-col (click)="viewFollowing(false)" class="user-profile__user-details-followers__col">
+                <ion-text class="blue-text">Followers</ion-text>
+                <ion-row>
+                  <ion-text> {{followerCount}}</ion-text>
+                </ion-row>
+              </ion-col>
+            </ion-row>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </div>
   </ion-toolbar>
 </ion-header>
+
 <ion-content>
   <app-user-profile [inputtedUser]="inputtedUser"></app-user-profile>
 </ion-content>
