--- a/src/app/tab4/tab4.page.html
+++ b/src/app/tab4/tab4.page.html
@@ -1,25 +1,32 @@
 <ion-header>
   <ion-toolbar>
-    <ion-grid>
-      <ion-row>
-        <ion-col size="1">
-          <ion-avatar>
-            <ion-img [src]="currentUser.photoURL"></ion-img>
-          </ion-avatar>
-        </ion-col>
-        <ion-col size="11">
-          <ion-title> {{currentUser.uid}}</ion-title>
-        </ion-col>
-      </ion-row>
-      <ion-row class="ion-margin">
-        <ion-col size="6" (click)="viewFollowing(true)">
-          Following <strong>{{followingCount}}</strong>
-        </ion-col>
-        <ion-col size="6" (click)="viewFollowing(false)">
-          Followers <strong>{{followerCount}}</strong>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
+    <div class="user-profile__user-details">
+      <ion-grid>
+        <ion-row>
+          <ion-col class="user-profile__user-details-image__col">
+            <ion-img class="user-profile__user-details-image" [src]="currentUser.photoURL"></ion-img>
+          </ion-col>
+          <ion-col class="user-profile__user-details-name__col">
+            <ion-text class="user-profile__user-details-name__text"> {{currentUser.displayName}}</ion-text>
+            <ion-row class="user-profile__user-details-follow-count__row">
+              <ion-col (click)="viewFollowing(true)" class="user-profile__user-details-following__col">
+                <ion-text class="blue-text">Following</ion-text>
+                <ion-row>
+                  <ion-text>{{followingCount}}</ion-text>
+                </ion-row>
+              </ion-col>
+              <div class="vertical-line"></div>
+              <ion-col (click)="viewFollowing(false)" class="user-profile__user-details-followers__col">
+                <ion-text class="blue-text">Followers</ion-text>
+                <ion-row>
+                  <ion-text> {{followerCount}}</ion-text>
+                </ion-row>
+              </ion-col>
+            </ion-row>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+    </div>
   </ion-toolbar>
 </ion-header>
 <ion-content>
