--- a/src/app/tab2/tab2.page.scss
+++ b/src/app/tab2/tab2.page.scss
@@ -1,3 +1,6 @@
+ion-searchbar {
+  margin-top: 14%;
+}
 // For the carosuel
 .carousel {
   white-space: nowrap;
@@ -16,11 +19,11 @@
 }
 .movie-thumb {
   //   height: 141px;
-  width: 94px;
+  width: 105px;
   margin-right: 16px;
 }
 
-h4 {
+h3 {
   // color: #092042;
   margin-left: 10px;
   font-weight: 600;
