--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -13,64 +13,64 @@
   </ion-segment-button>
 </ion-segment>
 
-<ion-card>
-  <ion-card-content *ngIf="showTop10">
-    <ion-list *ngFor="let movie of profileContent.top10; let i = index">
-      <ion-grid>
-        <ion-row (click)="viewMovie(movie.ID)" class="user-profile__card__row">
-          <ion-col size="1" class="user-profile__card__number__col"><strong>{{i+1}}</strong></ion-col>
-          <ion-col size="3">
-            <ion-img [src]="movie.poster"> </ion-img>
-          </ion-col>
-          <ion-col size="8" class="user-profile__card__movie-title__col">
-            <!-- <ion-title>Hey</ion-title> -->
-            <!-- <ion-card-title class="ion-margin-bottom"></ion-card-title> -->
-            <ion-text>{{movie.title}}</ion-text>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </ion-list>
-  </ion-card-content>
-  <ion-card-content *ngIf="showWatchlist">
-    <ion-list *ngFor="let movie of profileContent.watchlist; let i = index">
-      <ion-grid>
-        <ion-row (click)="viewMovie(movie.ID)" class="user-profile__card__row">
-          <ion-col size="3">
-            <ion-img [src]="movie.poster"> </ion-img>
-          </ion-col>
-          <ion-col size="9" class="user-profile__card__movie-title__col">
-            <h2 class="ion-margin-bottom">{{movie.title}}</h2>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </ion-list>
-  </ion-card-content>
-  <ion-card-content *ngIf="showRatings">
-    <ion-list *ngFor="let movie of profileContent.ratings; let i = index">
-      <ion-grid>
-        <ion-row (click)="viewMovie(movie.ID)" class="user-profile__card__row">
-          <ion-col size="3">
-            <ion-img [src]="movie.poster"> </ion-img>
-          </ion-col>
-          <ion-col size="9" class="user-profile__card__movie-title__col">
-            <h2 class="ion-margin-bottom">{{movie.title}}</h2>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </ion-list>
-  </ion-card-content>
-  <ion-card-content *ngIf="showLists">
-    <ion-list *ngFor="let movie of profileContent.lists; let i = index">
-      <ion-grid>
-        <ion-row (click)="viewMovie(movie.ID)" class="user-profile__card__row">
-          <ion-col size="3">
-            <ion-img [src]="movie.poster"> </ion-img>
-          </ion-col>
-          <ion-col size="9" class="user-profile__card__movie-title__col">
-            <h2 class="ion-margin-bottom">{{movie.title}}</h2>
-          </ion-col>
-        </ion-row>
-      </ion-grid>
-    </ion-list>
-  </ion-card-content>
-</ion-card>
+<!-- <ion-card> -->
+<ion-card-content *ngIf="showTop10">
+  <ion-item *ngFor="let movie of profileContent.top10; let i = index" class="ion-align-items-end">
+    <ion-grid>
+      <ion-row (click)="viewMovie(movie.ID)" class="user-profile__card__row">
+        <ion-col class="user-profile__card__number__col"><strong>{{i+1}}</strong></ion-col>
+        <ion-col class="user-profile__card__movie-poster__col">
+          <img class="user-profile__card__movie-poster" [src]="movie.poster">
+        </ion-col>
+        <ion-col class="user-profile__card__movie-title__col">
+          <!-- <ion-title>Hey</ion-title> -->
+          <!-- <ion-card-title class="ion-margin-bottom"></ion-card-title> -->
+          <ion-text>{{movie.title}}</ion-text>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-item>
+</ion-card-content>
+<ion-card-content *ngIf="showWatchlist">
+  <ion-list *ngFor="let movie of profileContent.watchlist; let i = index">
+    <ion-grid>
+      <ion-row (click)="viewMovie(movie.ID)" class="user-profile__card__row">
+        <ion-col size="3">
+          <ion-img [src]="movie.poster"> </ion-img>
+        </ion-col>
+        <ion-col size="9" class="user-profile__card__movie-title__col">
+          <h2 class="ion-margin-bottom">{{movie.title}}</h2>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-list>
+</ion-card-content>
+<ion-card-content *ngIf="showRatings">
+  <ion-list *ngFor="let movie of profileContent.ratings; let i = index">
+    <ion-grid>
+      <ion-row (click)="viewMovie(movie.ID)" class="user-profile__card__row">
+        <ion-col size="3">
+          <ion-img [src]="movie.poster"> </ion-img>
+        </ion-col>
+        <ion-col size="9" class="user-profile__card__movie-title__col">
+          <h2 class="ion-margin-bottom">{{movie.title}}</h2>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-list>
+</ion-card-content>
+<ion-card-content *ngIf="showLists">
+  <ion-list *ngFor="let movie of profileContent.lists; let i = index">
+    <ion-grid>
+      <ion-row (click)="viewMovie(movie.ID)" class="user-profile__card__row">
+        <ion-col size="3">
+          <ion-img [src]="movie.poster"> </ion-img>
+        </ion-col>
+        <ion-col size="9" class="user-profile__card__movie-title__col">
+          <h2 class="ion-margin-bottom">{{movie.title}}</h2>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-list>
+</ion-card-content>
+<!-- </ion-card> -->
