--- a/src/app/pages/movie-page/movie-page.page.html
+++ b/src/app/pages/movie-page/movie-page.page.html
@@ -23,7 +23,7 @@
     <div class="top-div__buttons">
       <ion-button class="top-div__button" (click)="openReviewModal()">
         <ion-icon name="star-outline" class="top-div__button--rate-icon"></ion-icon>
-        Rate
+        Review
       </ion-button>
       <ion-button class="top-div__button">
         <ion-icon name="add"></ion-icon>
