--- a/src/app/components/user-profile/user-profile.component.scss
+++ b/src/app/components/user-profile/user-profile.component.scss
@@ -20,9 +20,9 @@ div{
   margin: 16px auto 16px auto;
 }
 
-// ion-item{
-
-// }
+ion-item{
+  float: left;
+}
 
 .user-profile__card__number__col{
   margin-top: auto;
