--- a/src/app/pages/registration/registration.page.scss
+++ b/src/app/pages/registration/registration.page.scss
@@ -1,5 +1,15 @@
 .already-registered {
     position: absolute;
-    bottom: 20px;
+    bottom: 60px;
     left: 20px;
+}
+
+ion-button{
+  padding: 0;
+  height: 50px;
+}
+
+.manual-sign-up__text{
+  margin-top: 80px;
+  margin-bottom: 0;
 }
