--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,18 +1,33 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<h1>Welcome to Mega Chat</h1>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<div class="login">
+  <div *ngIf=" auth.user$ | async as user; else login">
+    <img [src]="user.photoURL" width="50px">
+    <p>
+      <span class="tag is-dark">{{ user.displayName }}</span>
+      <span class="tag is-light">{{ user.uid }}</span>
+    </p>
 
-  <app-explore-container name="Tab 3 page"></app-explore-container>
 
-</ion-content>
+    <ion-button class="button is-small" (click)="auth.signOut()">Sign Out</ion-button>
+    <hr>
+
+    <ion-button class="button" routerLink="/chats/UJrR0M10IK7VJDVCQIKF">Join Mega Chat 🎪</ion-button>
+    <ion-button class="button is-info" (click)="cs.create()">Create New Chat</ion-button>
+
+    <hr>
+
+    <h3>My Chats</h3>
+
+    <ul>
+      <li *ngFor="let chat of userChats$ | async">
+        <a [routerLink]="'chats/' + chat.id">{{ chat.id }} - {{ chat.messages.length }} Messages </a>
+      </li>
+    </ul>
+  </div>
+
+  <ng-template #login>
+    <ion-button class="button" (click)="authenticationService.googleSignIn()">Login with Google</ion-button>
+  </ng-template>
+
+</div>
