--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -10,7 +10,7 @@
   margin-left: auto;
   order: 2;
   text-align: left;
-  border-bottom: 1px solid #e9e9e9;
+  border: 1px solid blue;
   padding: 10px;
   width: 90vw;
   font-size: 1.3em;
@@ -20,7 +20,8 @@
   .user {
     margin-right: 10px;
     min-width: 100px;
-    border-right: 1px solid #e9e9e9;
+    max-width: 200px;
+    border: 1px solid red;
   }
 }
 
@@ -33,6 +34,7 @@
   height: 100px;
   padding: 20px 10vw;
   background: rgba(255, 255, 255, 0.8);
+  border: 1px solid cornflowerblue;
 }
 
 .top {
@@ -44,4 +46,14 @@
   padding: 20px 10vw;
   background: rgba(255, 255, 255, 0.8);
   z-index: 99;
+  border: 1px solid olivedrab;
+}
+
+.user-profile__image{
+  width: 78px;
+  height: 78px;
+  max-width: 78px;
+  border-radius: 50%;
+  overflow: hidden;
+  margin: 0 auto;
 }
