--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,33 +1,31 @@
-<h1>Welcome to Mega Chat</h1>
+<ion-header>
+  <ion-toolbar>
 
-<div class="login">
-  <div *ngIf=" auth.user$ | async as user; else login">
-    <img [src]="user.photoURL" width="50px">
-    <p>
-      <span class="tag is-dark">{{ user.displayName }}</span>
-      <span class="tag is-light">{{ user.uid }}</span>
-    </p>
+  </ion-toolbar>
+</ion-header>
+<ion-content>
+
+  <div class="login">
+    <div *ngIf=" auth.user$ | async as user">
+      <!-- <img [src]="user.photoURL" width="50px">
+      <p>
+        <span class="tag is-dark">{{ user.displayName }}</span>
+        <br>
+        <span class="tag is-light">{{ user.uid }}</span>
+      </p> -->
+
+      <!-- <ion-button class="button" routerLink="/chats/9kOUuXQVZqSbPjAHJ8Ab">Join Mega Chat 🎪</ion-button> -->
+      <ion-button class="button is-info" (click)="chatsService.create()">New Chat</ion-button>
 
 
-    <ion-button class="button is-small" (click)="auth.signOut()">Sign Out</ion-button>
-    <hr>
+      <h3>Chats</h3>
 
-    <ion-button class="button" routerLink="/chats/UJrR0M10IK7VJDVCQIKF">Join Mega Chat 🎪</ion-button>
-    <ion-button class="button is-info" (click)="cs.create()">Create New Chat</ion-button>
+      <ul>
+        <li *ngFor="let chat of userChats$ | async">
+          <a [routerLink]="'/chats/' + chat.id">{{ chat.id }} - {{ chat.messages.length }} Messages </a>
+        </li>
+      </ul>
+    </div>
 
-    <hr>
-
-    <h3>My Chats</h3>
-
-    <ul>
-      <li *ngFor="let chat of userChats$ | async">
-        <a [routerLink]="'chats/' + chat.id">{{ chat.id }} - {{ chat.messages.length }} Messages </a>
-      </li>
-    </ul>
   </div>
-
-  <ng-template #login>
-    <ion-button class="button" (click)="authenticationService.googleSignIn()">Login with Google</ion-button>
-  </ng-template>
-
-</div>
+</ion-content>
