Recommendations modal + rating slider set up

--- a/src/app/pages/connections/connections.page.html
+++ b/src/app/pages/connections/connections.page.html
@@ -24,4 +24,15 @@
       <app-user-profile-card [user]="user.data"></app-user-profile-card>
     </div>
   </ng-template>
+
+
+  <!----------------  TRIAL STUFF  --------------- -->
+  <div>
+    <ul>
+      <li *ngFor="let user of usersList$ | async">
+        <a>{{ user.id }} - {{ user.displayName }} List </a>
+      </li>
+    </ul>
+  </div>
+
 </ion-content>
