--- a/src/app/pages/movie-page/movie-page.page.html
+++ b/src/app/pages/movie-page/movie-page.page.html
@@ -21,15 +21,16 @@
       <div class="top-div__imdb__rating" value=" - ">{{movieDetails.imdbRating}}</div>
     </div>
     <div class="top-div__buttons">
-      <ion-button class="top-div__button" (click)="openReviewModal()">
+      <ion-button class="top-div__button" (click)="openReviewModal('review')">
         <ion-icon name="star-outline" class="top-div__button--rate-icon"></ion-icon>
-        Review
+        Rate
       </ion-button>
       <ion-button class="top-div__button">
         <ion-icon name="add"></ion-icon>
         Watchlist
       </ion-button>
-      <!-- <ion-button class="top-div__button">Recommend</ion-button> -->
+      <ion-button class="top-div__button" (click)="openReviewModal('recommend')">
+        Recommend</ion-button>
     </div>
 
   </div>
