--- a/src/app/pages/review-modal/review-modal.page.html
+++ b/src/app/pages/review-modal/review-modal.page.html
@@ -41,4 +41,10 @@
       </ion-col>
     </ion-row>
   </ion-grid>
+  <!-- <ngb-rating [(rate)]="selected" (hover)="hovered=$event" (leave)="hovered=0" [readonly]="readonly"></ngb-rating>
+  <hr>
+  <pre>
+  Selected: <b>{{selected}}</b>
+  Hovered: <b>{{hovered}}</b>
+  </pre> -->
 </ion-content>
