--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -14,6 +14,7 @@
         <span class="tag is-light">{{ user.uid }}</span>
       </p> -->
 
+      <p>{{user.uid}}</p>
       <!-- <ion-button class="button" routerLink="/chats/9kOUuXQVZqSbPjAHJ8Ab">Join Mega Chat 🎪</ion-button> -->
       <ion-button class="button is-info" (click)="chatsService.create()">New Chat</ion-button>
 
