--- a/src/global.scss
+++ b/src/global.scss
@@ -50,3 +50,41 @@ ion-button{
 ion-back-button{
  margin-left: 8px;
 }
+
+.global--text-area{
+  width: 100%;
+  border: var(--ion-text-color-light-grey) 2px solid;
+  margin: 20px auto;
+  --padding-top:  8px;
+  --padding-bottom:  8px;
+  --padding-end:  8px;
+  --padding-start:  8px;
+  border-radius: 8px;
+}
+
+/// Profile card used in profile-card component and the recommednaiton modal
+.profile-card__row{
+  margin-bottom: 8px;
+}
+
+.profile-card__display-name__col{
+  margin: auto 0;
+}
+
+.profile-card__display-name__text{
+  margin: auto 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+
+}
+
+.profile-card__follow-button__col{
+margin: auto;
+text-align: right;
+}
+
+.profile-card__follow-button{
+  width: 100%;
+  margin-right: 0;
+}
